# hackathon-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml  mlops.yml
n8n/: activate-workflows.mjs  entrypoint.sh  setup-workflows.mjs
n8n/workflows/: Auto-Updating RAG Pipeline with Supabase and Google Drive Integration.json  simple-automation.json
services/backend/: Dockerfile  package.json
services/backend/src/: app.js  index.js  rag.js  server.js
services/backend/src/controllers/: automations.controller.js  chat.controller.js  clients.controller.js  health.controller.js  overrides.controller.js  predictions.controller.js
services/backend/src/db/: index.js
services/backend/src/middleware/: errorHandler.js  validateRequest.js
services/backend/src/routes/: automations.routes.js  chat.routes.js  clients.routes.js  overrides.routes.js  predictions.routes.js
services/backend/test/: rag.test.js
services/frontend/: Dockerfile  index.html  package.json  vite.config.js
services/frontend/src/: App.css  App.jsx  index.css  main.jsx
services/python-api/: Dockerfile  pyproject.toml  requirements.txt
services/python-api/mlops/: benchmark_explainability.py  deploy_model.py  generate_shap_plots.py  test_pipeline.py  train_pipeline.py
services/python-api/mlops/tests/: test_explainability.py
services/python-api/src/: __init__.py  app.py  explainability.py  main.py  model.joblib  solution.py
(+38 files in other folders)
