[project]
name = "hackathon-python-api"
version = "1.0.0"
description = "FastAPI micro-service for the hackathon platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "psycopg2-binary>=2.9,<3",
    "sqlalchemy>=2.0,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
