[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-api"
version = "1.0.0"
description = "FastAPI prediction service for insurance bundle recommendation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "scikit-learn>=1.4,<2",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "joblib>=1.3,<2",
    "lightgbm>=4.0,<5",
]
